tests/syntax/invalid/bad_utf8.zn
// Below is the byte 0xFF which is invalid in UTF-8
ÿ // <- here
